Ckeaned up (simplified) features.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ add_library(AVXLib avx.cpp avx.h
 			avx.h CLexIndex.cpp CLexIndex.h
 			fivebitencoding.cpp fivebitencoding.h
 			slicable.cpp slicable.h
-			search.cpp SearchRequest.h SearchControls.h SearchClause.h SearchFragment.h FeatureSpec.h FeatureMatch.h Feature.h)
+			search.cpp SearchRequest.h SearchControls.h SearchClause.h SearchFragment.h FeatureSpec.h Feature.h)
