Add additional source files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,8 @@ include_directories(AFTER "C:/Users/kevin/source/C/XVMem")
 add_library(AVXLib avx.cpp avx.h
 			avx.h CLexIndex.cpp CLexIndex.h
 			fivebitencoding.cpp fivebitencoding.h
+			XBitArray.cpp XBitArray.h
+			BookChapterVerseMap.cpp BookChapterVerseMap.h
+			fivebitencoding.cpp fivebitencoding.h
 			slicable.cpp slicable.h
 			search.cpp SearchRequest.h SearchControls.h SearchClause.h SearchFragment.h FeatureSpec.h Feature.h)
